# roq-binance-futures

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: meta.yaml  run_test.sh
share/: config.toml
share/flags/prod/: flags-dapi.cfg  flags-fapi.cfg
share/flags/test/: flags-dapi.cfg  flags-fapi.cfg
src/roq/binance_futures/: .gitignore  CMakeLists.txt  README.md  TODO  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  coin-m.sh  config.cpp  config.hpp  drop_copy.hpp  drop_copy_classic.cpp  drop_copy_classic.hpp  drop_copy_portfolio.cpp  drop_copy_portfolio.hpp  drop_copy_portfolio_state.json  drop_copy_state.json  gateway.cpp  gateway.hpp  index.rst  live-dapi.sh  live-fapi.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_classic.cpp  order_entry_classic.hpp  order_entry_portfolio.cpp  order_entry_portfolio.hpp  order_entry_state.json  request.hpp  rest.cpp  rest.hpp  rest_state.json  rest_trade.cpp  rest_trade.hpp  (+8 more)
src/roq/binance_futures/flags/: .gitignore  CMakeLists.txt  flags.json  mbp.json  misc.json  request.json  rest.json  ws.json  ws_api.json
src/roq/binance_futures/json/: .gitignore  CMakeLists.txt  account.json  account_balance_ack.json  account_balance_ack_item.json  account_config_update.json  account_config_update_data1.json  account_config_update_data2.json  account_status_ack.json  account_update.json  account_update_data.json  account_update_data_balance.json  account_update_data_position.json  agg_trade.json  asset.json  auto_cancel_all_open_orders.json  balance.json  balance_item.json  balance_update.json  balances_item.json  book_ticker.json  cancel_all_open_orders.json  cancel_order.json  contract_status.json  contract_type.json  countdown_cancel_all_ack.json  depth.json  depth_ack.json  depth_ack_bids_asks_item.json  depth_item.json  depth_update.json  depth_update_bids_asks_item.json  encoder.cpp  encoder.hpp  error.json  event_reason.json  event_type.json  exchange_info.json  exchange_info_ack.json  exchange_info_ack_assets_item.json  (+91 more)
src/roq/binance_futures/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp
test/: .gitignore  CMakeLists.txt  json_account.cpp  json_account_balance_ack.cpp  json_account_config_update.cpp  json_account_status_ack.cpp  json_account_update.cpp  json_account_update_papi.cpp  json_auto_cancel_all_open_orders.cpp  json_balance.cpp  json_balance_update.cpp  json_book_ticker.cpp  json_cancel_order.cpp  json_countdown_cancel_all_ack.cpp  json_depth.cpp  json_depth_ack.cpp  json_depth_update.cpp  json_encoder.cpp  json_error.cpp  json_exchange_info.cpp  json_exchange_info_ack.cpp  json_filters.cpp  json_grid_update.cpp  json_liability_change.cpp  json_listen_key.cpp  json_listen_key_ack.cpp  json_margin_call.cpp  json_mini_ticker.cpp  json_new_order.cpp  json_open_orders.cpp  json_open_orders_ack.cpp  json_order_cancel_ack.cpp  json_order_place_ack.cpp  json_order_trade_update.cpp  json_order_trade_update_papi.cpp  json_outbound_account_position.cpp  json_position_papi.cpp  json_session_logon.cpp  json_strategy_update.cpp  json_trades.cpp  (+12 more)
